--- a/static/css/post_main.css
+++ b/static/css/post_main.css
@@ -1,17 +1,15 @@
 div,
-input {
+input,
+span {
   border: 0;
   padding: 0;
-}
-
-body {
-  margin: 0;
 }
 
 /* 단위 다 vh로 바꾸기 */
 
 #main__introduce_div {
-  height: 569px;
+  padding-top: 70px;
+  height: 300px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -22,7 +20,6 @@ body {
 #main__main_div {
   /* 기존에 margin 좌우 272로 했다가 padding으로 바꿨다가 일단 없앰 */
   /* width를 없애면 스크롤 문제를 해결하고 양 옆에 여백을 둘 수 있음 */
-  padding: 0 50px;
   /* 일단 지금 너무 커서 50으로 둠 */
 }
 
@@ -32,50 +29,50 @@ body {
 
 #main__info_div {
   margin-top: 20px;
-  width: 1360px;
 }
 
 #main__search_div__top {
   display: flex;
-  height: 250px;
-  width: 1360px;
+  height: 160px;
+  width: 100%;
 }
 
 #search_div__top_right {
   /*width: 234px;*/
-  width: 234px;
+  width: 22%;
 }
 
 #search_div__top_left {
   /*width: 1126px;*/
-  width: 1126px;
+  width: 76%;
+  margin-right: 2%;
 }
 
 #search_div__top_left__nav {
   display: flex;
-  height: 60px;
-  width: 400px;
+  height: 40px;
+  max-width: 35%;
   justify-content: space-between;
   align-items: center;
 }
 
 #search_div__top_left__nav span {
-  font-size: 26px;
+  font-size: 20px;
   font-weight: 700;
 }
 
 #search_div__top_left__search {
   display: inline-block;
+  width: 100%;
 }
 
 #search_div__top_left__search input {
-  height: 79px;
-  /* 원래 width는 1126px */
-  width: 1126px;
-  margin: 10px 0;
+  height: 50px;
+  width: 100%;
+  margin: 7px 0;
   border-radius: 5px;
   border: 1px solid rgb(141, 141, 141);
-  font-size: 20px;
+  font-size: 16px;
 }
 
 #main__search_text {
@@ -95,58 +92,61 @@ body {
 }
 
 #search_div__top_right__switch {
-  height: 60px;
   display: flex;
   align-items: center;
+  height: 40px;
 }
 
-#search_div__top_right__switch span {
-  font-size: 26px;
+.search_div__top_right__switch_txt p {
+  font-size: 18px;
   font-weight: 700;
 }
 
+.search_div__top_right__switch_txt {
+  width: 1000px;
+}
+
 #search_div__top_right__btn {
-  height: 79px;
-  margin: 10px 0 0;
+  height: 40px;
+  margin: 7px 0 0;
   display: flex;
   justify-content: center;
 }
 
 #search_div__top_right__reset {
-  height: 79px;
-  margin: 20px 0 0;
+  height: 40px;
+  padding-top: 30px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 #search_div__top_right__reset span {
-  font-size: 22px;
-  margin-left: 12px;
+  font-size: 18px;
+  margin-left: 5px;
 }
 
 #main__search_div__tag {
-  height: 50px;
   width: fit-content;
 }
 
 #main__info_div__nav {
   display: flex;
   height: 60px;
-  width: 330px;
   justify-content: space-between;
   align-items: center;
+  width: 25%;
 }
 
 #main__info_div__nav span {
-  font-size: 20px;
+  font-size: 17px;
   font-weight: 700;
 }
 
 #main__info_div__box {
   display: flex;
   align-items: center;
-  margin-left: 1000px;
+  margin-left: 0;
 }
 
 #info_div__select_box {
@@ -156,13 +156,19 @@ body {
 
 #main__info_div__top {
   display: flex;
+  justify-content: space-between;
 }
 
 #main__info_div__post {
-  height: 274px;
   border: 1px solid rgb(221, 221, 221);
-  border-left: 5px solid blue;
   display: flex;
+  padding: 10px 0;
+  margin-bottom: 20px;
+  transition: all 0.5s;
+}
+
+#main__info_div__post:hover {
+  box-shadow: 1px 1px 20px rgb(221, 221, 221);
 }
 
 /* 셀렉트 박스 고치고 https://velog.io/@ewaterbin/CSS-.-%EC%85%80%EB%A0%89%ED%8A%B8-%EB%B0%95%EC%8A%A4%EB%A5%BC-%EA%B5%AC%ED%98%84%ED%95%98%EB%A9%B0-%EB%B4%89%EC%B0%A9%ED%95%9C-%EB%82%9C%EA%B4%80%EB%93%A4, 
@@ -172,7 +178,7 @@ body {
   display: flex;
   list-style: none;
   padding: 0;
-  margin-top: 25px;
+  margin-top: 15px;
 }
 
 .main__search_li__tag_flex {
@@ -184,41 +190,41 @@ body {
 .main__info_li__tag_flex li {
   border-radius: 5px;
   background-color: rgb(221, 221, 221);
-  font-size: 18px;
-  padding: 10px;
-  margin-right: 10px;
+  font-size: 10px;
+  padding: 7px;
+  margin-right: 7px;
 }
 
 .main__search_li__tag_flex li {
   border-radius: 5px;
   background-color: rgb(221, 221, 221);
-  font-size: 18px;
-  padding: 10px;
+  font-size: 12px;
+  padding: 6px;
   margin-right: 10px;
 }
 
 #main__info_div__post_left {
-  width: 1106px;
   margin-left: 20px;
+  width: 70%;
 }
 
 #main__info_div__post_right {
-  width: 234px;
+  width: 30%;
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 
 #main__info_div__post_left__title {
-  font-size: 24px;
-  margin-top: 30px;
+  font-size: 18px;
+  margin-top: 10px;
   font-weight: 700;
 }
 
 #main__info_div__post_left__txt {
-  font-size: 18px;
-  margin-top: 25px;
-  width: 977px;
-  height: 56px;
+  font-size: 15px;
+  margin-top: 10px;
+  width: 100%;
 }
 
 #main__info_div__post_left__txt p {
@@ -228,19 +234,20 @@ body {
 #main__info_div__post_left__reaction i {
   width: 16px;
   height: 16px;
-  margin-right: 12px;
+  margin-right: 5px;
   color: rgb(110, 110, 110);
 }
 
 #main__info_div__post_left__reaction span {
-  margin-right: 20px;
-  font-size: 18px;
+  margin-right: 12px;
+  font-size: 15px;
   color: rgb(110, 110, 110);
 }
 
 #main__info_div__post_left__reaction {
   margin-top: 20px;
-  width: 300px;
+  margin-bottom: 10px;
+  width: 100%;
 }
 
 #main__info_div__post_right__info {
@@ -254,18 +261,18 @@ body {
 #main__search_btn {
   border-radius: 5px;
   border-style: none;
-  height: 79px;
-  width: 206px;
+  height: 50px;
+  width: 100%;
   background-color: #2253ff;
   color: white;
-  font-size: 22px;
+  font-size: 18px;
 }
 
 #main__reset_btn {
   border-style: none;
   background-color: #fff;
   font-weight: 700;
-  font-size: 22px;
+  font-size: 18px;
 }
 
 #main__search_reset {
@@ -277,8 +284,8 @@ body {
   width: 50px;
   height: 50px;
   text-align: center;
-  margin-top: 15px;
-  margin-left: 15px;
+  margin-top: 24px;
+  margin-left: 10px;
   align-items: center;
 }
 #switch {
@@ -293,8 +300,8 @@ body {
   position: relative;
   cursor: pointer;
   display: inline-block;
-  width: 58px;
-  height: 28px;
+  width: 40px;
+  height: 19px;
   background: #fff;
   border: 2px solid #2253ff;
   border-radius: 20px;
@@ -305,11 +312,11 @@ body {
 }
 .onf_btn {
   position: absolute;
-  top: 4px;
-  left: 3px;
+  top: 2px;
+  left: 2px;
   display: inline-block;
-  width: 20px;
-  height: 20px;
+  width: 15px;
+  height: 15px;
   border-radius: 20px;
   background: #2253ff;
   transition: 0.2s;
@@ -327,7 +334,7 @@ body {
 
 /* move */
 #switch:checked + .switch_label .onf_btn {
-  left: 34px;
+  left: 23px;
   background: #fff;
   box-shadow: 1px 2px 3px #00000020;
 }
