--- a/posts/templates/posts/main_detail.html
+++ b/posts/templates/posts/main_detail.html
@@ -1,161 +1,255 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="{% static 'css/main_detail.css' %}" />
-    <script
-      src="https://kit.fontawesome.com/05a54db67a.js"
-      crossorigin="anonymous"
-    ></script>
-    <title>MOCO</title>
-  </head>
-  <body>
-    <div id="main_detail__top">
-      <div id="main_detail__top__back_btn">
-        <a href=""><i class="fa-solid fa-arrow-left fa-2x"></i></a>
+{% extends 'posts/base.html' %} {% block content %}
+<div class="content">
+  <div id="main_detail__top">
+    <div id="main_detail__top__back_btn">
+      <a href=""><i class="fa-solid fa-arrow-left fa-2x"></i></a>
+    </div>
+    <div id="main_detail__top__main">
+      <div id="main_detail__top__left">
+        <div id="main_detail__top_left__tag">
+          <ul class="main_detatil__top_left__ul">
+            <li id="main__detail__top_left__ul__recruit">모집중</li>
+            <li>오프라인</li>
+            <li>서울</li>
+            <li>프론트엔드</li>
+            <li>초보자</li>
+            <li>포트폴리오</li>
+          </ul>
+        </div>
+        <div id="main_detail__top__title">
+          주말 2:00 ~ 4:00 사이 모각코 스터디 구해요
+        </div>
+        <div id="main_detail__top__profile">
+          <div id="main_detail__top__img">
+            <i class="fa-solid fa-circle-user fa-2x"></i>
+          </div>
+          <div id="main_detail__top__name">
+            <span>김피로</span>
+          </div>
+          <div id="main_detail__top__time">
+            <span>2022-07-27</span>
+          </div>
+        </div>
       </div>
-      <div id="main_detail__top__main">
-        <div id="main_detail__top__left">
-          <div id="main_detail__top_left__tag">
-            <ul class="main_detatil__top_left__ul">
-              <li id="main__detail__top_left__ul__recruit">모집중</li>
-              <li>오프라인</li>
-              <li>서울</li>
-              <li>프론트엔드</li>
-              <li>초보자</li>
-              <li>포트폴리오</li>
-            </ul>
+      <div id="main_detail__top__right">
+        <div id="main_detail__top__apply">
+          <button id="main_detail__top__apply_btn" type="submit">
+            지원하기
+          </button>
+        </div>
+        <div id="main_detail__top__like">
+          <button id="main_detail__top__like_btn" type="button">
+            <i class="fa-regular fa-heart fa-lg"></i>
+            <p>5</p>
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div id="main_detail__main">
+    <div id="main_detail__main__info">
+      <div>
+        <h4>진행방식</h4>
+        <span>오프라인</span>
+      </div>
+      <div>
+        <h4>모임형태</h4>
+        <span>정기</span>
+      </div>
+      <div>
+        <h4>모집인원</h4>
+        <span>4명</span>
+      </div>
+      <div>
+        <h4>지역</h4>
+        <span>서울 강동구</span>
+      </div>
+      <div>
+        <h4>개발언어</h4>
+        <span>상관없음</span>
+      </div>
+    </div>
+    <div id="main_detail__main__txt">
+      취준생인데 혼자 공부하는것보다 여럿이서 규칙을 지키면서 공부하는게 더
+      도움이 돼서 만들었습니다. 서로 같이 공부하는데 가끔 정보도 주고받고 저녁도
+      같이 먹는 편안한 분위기를 지향하고 있습니다. 무조건 주말 낮 2시~4시에는
+      참여하셔야하고 그 이후나 평일은 자유입니다. 실력은 크게 상관없지만,
+      가능하면 저와 같이 이제 막 프론트엔드 공부를 시작하는 초보자 분이었으면 더
+      좋을 것 같습니다!
+    </div>
+  </div>
+  <div id="main_detail__comment">
+    <div id="main_detail__comment__top">
+      <div id="main_detail__comment__blank">
+        <h2>댓글</h2>
+        <h2 id="main_detail__comment_num">2</h2>
+      </div>
+      <div id="main_detail__comment__rule">
+        <span>300자 이내 작성</span>
+      </div>
+    </div>
+    <div id="main_detail__comment__blank_box">
+      <textarea
+        name="comment"
+        id="comment_input_box"
+        cols="30"
+        rows="10"
+        placeholder="댓글을 입력해주세요."
+      ></textarea>
+    </div>
+    <div id="main_detail__comment__btnplace">
+      <button type="submit" id="main_detail__comment__btn">
+        <p>댓글 쓰기</p>
+      </button>
+    </div>
+    <div id="main_detail__comment__contents">
+      <div id="main_detail__comment__each__contents">
+        <div id="main_detail__comment__contents__profile">
+          <div id="main_detail__comment__contents__img">
+            <i class="fa-solid fa-circle-user fa-2x"></i>
           </div>
-          <div id="main_detail__top__title">
-            주말 2:00 ~ 4:00 사이 모각코 스터디 구해요
-          </div>
-          <div id="main_detail__top__profile">
-            <div id="main_detail__top__img">
-              <i class="fa-solid fa-circle-user fa-2x"></i>
+          <div id="main_detail__comments__contents__info">
+            <div id="main_detail__comments__contents__name">
+              <span>개발 꿈나무</span>
             </div>
-            <div id="main_detail__top__name">
+            <div id="main_detail__comments__contents__time">
+              <span>2022-07-28</span>
+            </div>
+          </div>
+        </div>
+        <div id="main_detail__comment__contents__txt">
+          <span>오픈채팅 들어가서 카톡 남겼는데 확인해주실 수 있나요ㅠ</span>
+        </div>
+        <div id="main_detail__comment__contents__reply">
+          <button></button>
+        </div>
+      </div>
+      <div id="main_detail__comment__each__contents">
+        <div id="main_detail__comment__contents__profile">
+          <div id="main_detail__comment__contents__img">
+            <i class="fa-solid fa-circle-user fa-2x"></i>
+          </div>
+          <div id="main_detail__comments__contents__info">
+            <div id="main_detail__comments__contents__name">
               <span>김피로</span>
             </div>
-            <div id="main_detail__top__time">
-              <span>2022-07-27</span>
+            <div id="main_detail__comments__contents__time">
+              <span>2022-07-28</span>
             </div>
           </div>
         </div>
-        <div id="main_detail__top__right">
-          <div id="main_detail__top__apply">
-            <button id="main_detail__top__apply_btn" type="submit">
-              지원하기
-            </button>
-          </div>
-          <div id="main_detail__top__like">
-            <button id="main_detail__top__like_btn" type="button">
-              <i class="fa-regular fa-heart fa-lg"></i>
-              <p>5</p>
-            </button>
-          </div>
+        <div id="main_detail__comment__contents__tag">
+          <span>@ 개발 꿈나무</span>
+        </div>
+        <div id="main_detail__comment__contents__txt">
+          <span>방금 확인하고 답장 드렸어요!</span>
         </div>
       </div>
     </div>
-    <div id="main_detail__main">
-      <div id="main_detail__main__info">
-        <div>
-          <h4>진행방식</h4>
-          <span>오프라인</span>
-        </div>
-        <div>
-          <h4>모임형태</h4>
-          <span>정기</span>
-        </div>
-        <div>
-          <h4>모집인원</h4>
-          <span>4명</span>
-        </div>
-        <div>
-          <h4>지역</h4>
-          <span>서울 강동구</span>
-        </div>
-        <div>
-          <h4>개발언어</h4>
-          <span>상관없음</span>
-        </div>
+  </div>
+  <div id="main_detail__review">
+    <div id="main_detail__review__top">
+      <div id="main_detail__review__blank">
+        <h2>후기</h2>
+        <h2 id="main_detail__review_num">2</h2>
       </div>
-      <div id="main_detail__main__txt">
-        취준생인데 혼자 공부하는것보다 여럿이서 규칙을 지키면서 공부하는게 더
-        도움이 돼서 만들었습니다. 서로 같이 공부하는데 가끔 정보도 주고받고
-        저녁도 같이 먹는 편안한 분위기를 지향하고 있습니다. 무조건 주말 낮
-        2시~4시에는 참여하셔야하고 그 이후나 평일은 자유입니다. 실력은 크게
-        상관없지만, 가능하면 저와 같이 이제 막 프론트엔드 공부를 시작하는 초보자
-        분이었으면 더 좋을 것 같습니다!
+      <div id="main_detail__review__rule">
+        <span>300자 이내 작성</span>
       </div>
     </div>
-    <div id="main_detail__comment">
-      <div id="main_detail__comment__top">
-        <div id="main_detail__comment__blank">
-          <h2>댓글</h2>
-          <h2 id="main_detail__comment_num">2</h2>
-        </div>
-        <div id="main_detail__comment__rule">
-          <span>300자 이내 작성</span>
-        </div>
-      </div>
-      <div id="main_detail__comment__blank_box">
-        <textarea
-          name="comment"
-          id="comment_input_box"
-          cols="30"
-          rows="10"
-          placeholder="댓글을 입력해주세요."
-        ></textarea>
-      </div>
-      <div id="main_detail__comment__btnplace">
-        <button type="submit" id="main_detail__comment__btn">
-          <p>댓글 쓰기</p>
-        </button>
-      </div>
-      <div id="main_detail__comment__contents">
-        <div id="main_detail__comment__each__contents">
-          <div id="main_detail__comment__contents__profile">
-            <div id="main_detail__comment__contents__img">
-              <i class="fa-solid fa-circle-user fa-2x"></i>
-            </div>
-            <div id="main_detail__comments__contents__info">
-              <div id="main_detail__comments__contents__name">
-                <span>개발 꿈나무</span>
-              </div>
-              <div id="main_detail__comments__contents__time">
-                <span>2022-07-28</span>
-              </div>
-            </div>
+    <div id="main_detail__review__blank_box">
+      <div id="main_detail__review__filebox">
+        <label for="main_detail__review__upload_file">
+          <div id="main_detail__review__uploadbtn">
+            <h1>+</h1>
+            <p>이미지를 드래그하거나 클릭해서 업로드해주세요</p>
           </div>
-          <div id="main_detail__comment__contents__txt">
-            <span>오픈채팅 들어가서 카톡 남겼는데 확인해주실 수 있나요ㅠ</span>
-          </div>
-        </div>
-        <div id="main_detail__comment__each__contents">
-          <div id="main_detail__comment__contents__profile">
-            <div id="main_detail__comment__contents__img">
-              <i class="fa-solid fa-circle-user fa-2x"></i>
+        </label>
+        <input
+          type="file"
+          id="main_detail__review__upload_file"
+          placeholder="이미지를 드래그하거나 클릭해서 업로드해주세요"
+        />
+      </div>
+      <textarea
+        name="review"
+        id="review_input_box"
+        cols="30"
+        rows="10"
+        placeholder="후기를 입력하세요."
+      ></textarea>
+    </div>
+    <div id="main_detail__review__btnplace">
+      <button type="submit" id="main_detail__review__btn">
+        <p>후기 작성</p>
+      </button>
+    </div>
+    <div id="main_detail__review__contents">
+      <div class="main_detail__review__contents_top">
+        <div class="review__contents_box__user_info">
+          <div class="review__contents_box__profile">
+            <div class="review__contents_box__profile_img">
+              <i class="fa-solid fa-circle-user fa-3x"></i>
             </div>
-            <div id="main_detail__comments__contents__info">
-              <div id="main_detail__comments__contents__name">
+            <div class="review__contents_box__info">
+              <div class="main_detail__contents__profile_name">
                 <span>김피로</span>
               </div>
-              <div id="main_detail__comments__contents__time">
-                <span>2022-07-28</span>
+              <div class="main_detail__contents__profile_time">
+                <span>2022-07-27</span>
               </div>
             </div>
           </div>
-          <div id="main_detail__comment__contents__tag">
-            <span>@ 개발 꿈나무</span>
+          <div class="review__contents_box__auth">
+            <div id="review__contents_box__auth_host">주최자</div>
           </div>
-          <div id="main_detail__comment__contents__txt">
-            <span>방금 확인하고 답장 드렸어요!</span>
-          </div>
+        </div>
+        <div class="main_detail__review__contents_revise">
+          <img src="/static/img/dots.png" alt="" />
+        </div>
+      </div>
+      <div class="main_detail__review__contents_content">
+        <div class="main_detail__review__contents_img"></div>
+        <div class="main_detail__review__contents_text">
+          혼자 공부하다가 다른 사람들과 함께 공부하니까 훨씬 잘되네요. 모코에서
+          만난 사람들 다들 열심히 하시고 친절하셔서 좋은 경험이었습니다.
+          앞으로도 자주 이용할게요!
         </div>
       </div>
     </div>
-  </body>
-</html>
+    <div id="main_detail__review__contents">
+      <div class="main_detail__review__contents_top">
+        <div class="review__contents_box__user_info">
+          <div class="review__contents_box__profile">
+            <div class="review__contents_box__profile_img">
+              <i class="fa-solid fa-circle-user fa-3x"></i>
+            </div>
+            <div class="review__contents_box__info">
+              <div class="main_detail__contents__profile_name">
+                <span>김피로</span>
+              </div>
+              <div class="main_detail__contents__profile_time">
+                <span>2022-07-27</span>
+              </div>
+            </div>
+          </div>
+          <div class="review__contents_box__auth">
+            <div id="review__contents_box__auth_guest">참여자</div>
+          </div>
+        </div>
+        <div class="main_detail__review__contents_revise">
+          <img src="/static/img/dots.png" alt="" />
+        </div>
+      </div>
+      <div class="main_detail__review__contents_content">
+        <div class="main_detail__review__contents_img"></div>
+        <div class="main_detail__review__contents_text">
+          혼자 공부하다가 다른 사람들과 함께 공부하니까 훨씬 잘되네요. 모코에서
+          만난 사람들 다들 열심히 하시고 친절하셔서 좋은 경험이었습니다.
+          앞으로도 자주 이용할게요!
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+{% endblock %}
