[fix] Place 템플릿 write - form 수정

--- a/place/templates/place/write.html
+++ b/place/templates/place/write.html
@@ -3,98 +3,60 @@
 <div class="content">
 <form action="{% url 'place:write' %}" method="post" enctype="multipart/form-data">
   {% csrf_token %}
-  <table>
-    {{form.as_table}}
-  </table>
-  <div class="content-button">
-    <input type="button" value="취소" onclick="back()" />
-    <input type="submit" value="등록하기" />
+  <div class="content-box__item">
+      {{ form.name.errors }}
+      <lable for="{{ form.name.id_for_label }}">상호명</lable>
+      {{ form.name }}
   </div>
-    <!-- <div class="content-box">
-      <div class="content-box__title">
-        <span>1</span><span> 사진을 업로드해주세요</span>
-        <hr>
-      </div>
-      <div class="content-box__element">
-        <div class="content-box__title">파일 선택</div>
-          <div class="content-box__image"></div>
-      </div>
-    </div>
-    <div class="content-box">
-      <div class="content-box__title">
-        <span>2</span><span> 상호명과 위치를 작성해주세요</span>
-        <hr>
-      </div>
-      <div class="content-box__element">
-        <div class="content-box__title">상호명</div>
-        <input class="content-box__input" type="text" name="name" maxlength="25" required="" id="id_name" placeholder="상호명을 입력해주세요">
-      </div>
-      <div class="content-box__element">
-        <div class="content-box__title">위치</div>
-        <input class="content-box__input" type="text" name="location" maxlength="25" required=""placeholder="도로명을 입력해주세요">
-        <input class="content-box__input" type="text" name="location" maxlength="25" required="" placeholder="상세 정보를 입력해주세요(선택)">
-        <div class="content-box__image"></div>
-      </div>
-    </div>
-    <div class="content-box">
-      <div class="content-box__title">
-        <span>3</span><span> 구체적인 정보를 작성해주세요</span>
-        <hr>
-      </div>
-      <div class="content-box__element">
-        <div class="content-box__title">장소분류</div>
-        <select name="category" required="" id="id_category" class="selectpicker">
-          <option selected value="default">----</option>
-          {% for category in categories %}
-          <option value="{{ category.1 }}">{{ category.1 }}</option>
-          {% endfor %}
-      </div>
-      <div class="content-box__element">
-        <div class="content-box__title">운영 시간</div>
-        <input class="content-box__input" type="text" name="opening_time" required="" id="id_opening_time">
-        <input class="content-box__input" type="text" name="closing_time" required="" id="id_closing_time">
-      </div>
-      <div class="content-box__element">
-        <div class="content-box__title">와이파이</div>
-        <select name="wifi" required="" id="id_wifi" class="selectpicker">
-          <option selected value="default">----</option>
-          {% for wifi in wifis %}
-          <option value="{{ wifi.1 }}">{{ wifi.1 }}</option>
-          {% endfor %}
-        </select>    
-      </div>
-        <div class="content-box__title">콘센트</div>
-        <select name="power_socket" required="" id="id_power_socket"class="selectpicker">
-          <option value="" selected="">---------</option>
-          {% for power_socket in power_sockets %}
-          <option value="{{ power_socket.1 }}">{{ power_socket.1 }}</option>
-          {% endfor %}
-        </select>    
-      </div>
-      <div class="content-box__element">
-        <div class="content-box__title">별점</div>
-        <input class="content-box__input" type="number" name="rating" step="any" required="" id="id_rating" min="1" max="5">
-      </div>
-    </div>
-    <div class="content-box">
-      <div class="content-box__title">
-        <span>4</span><span> 후기를 작성해주세요</span>
-        <hr>
-      </div>
-      <div class="content-box__element">
-        <div class="content-box__title">후기</div>
-        <textarea name="content" cols="40" rows="10" required="" id="id_content"></textarea>
-      </div>
-    </div>
-    <div class="content-button">
+  <div class="content-box__item">
+      {{ form.location.errors }}
+      <lable for="{{ form.location.id_for_label }}">위치</lable>
+      {{ form.location }}
+  </div>
+  <div class="content-box__item">
+      {{ form.category.errors }}
+      <lable for="{{ form.category.id_for_label }}">장소 분류</lable>
+      {{ form.category }}
+  </div>
+  <div class="content-box__item">
+    {{ form.opening_time.errors }}
+    <lable for="{{ form.opening_time.id_for_label }}">운영 시간</lable>
+    {{ form.opening_time }}
+  </div>
+  <div class="content-box__item">
+    {{ form.closing_time.errors }}
+    <lable for="{{ form.closing_time.id_for_label }}">운영 시간</lable>
+    {{ form.closing_time }}
+  </div>
+  <div class="content-box__item">
+    {{ form.wifi.errors }}
+    <lable for="{{ form.wifi_time.id_for_label }}">와이파이</lable>
+    {{ form.wifi }}
+  </div>
+  <div class="content-box__item">
+      {{ form.power_socket.errors }}
+      <lable for="{{ form.power_socket.id_for_label }}">콘센트</lable>
+      {{ form.power_socket }}
+  </div>
+  <div class="content-box__item">
+      {{ form.rating.errors }}
+      <lable for="{{ form.rating.id_for_label }}">별점</lable>
+      {{ form.rating }}
+  </div>
+  <div class="content-box__item">
+      {{ form.content.errors }}
+      <lable for="{{ form.content.id_for_label }}">후기</lable>
+      {{ form.content }}
+  </div>
+    <div class="content-box__item">
       <input type="button" value="취소" onclick="back()" />
       <input type="submit" value="등록하기" />
     </div>
   </form>
-  </div> -->
-  <!-- <script>
+</div>
+  <script>
     const back = () => {
       window.history.back();
     }
-  </script> -->
+  </script>
 {% endblock content %}
