--- a/posts/templates/posts/main.html
+++ b/posts/templates/posts/main.html
@@ -112,11 +112,7 @@
           </div>
           <div id="main__info_div__post_left__txt">
             <p>
-              취준생인데 혼자 공부하는 것보다 여럿이서 규칙을 지키면서
-              공부하는게 더 도움이 돼서 만들었습니다. 서로 같이 공부하는데 가끔
-              정보도 주고받고 저녁도 같이 먹는 편안한 분위기를 지향하고
-              있습니다. 무조건 주말 낮 2시~4시에는 참여하셔야하고 그 이후나
-              평일은
+              {{post.content}}
             </p>
           </div>
           <div id="main__info_div__post_left__reaction">
