--- a/posts/templates/posts/base.html
+++ b/posts/templates/posts/base.html
@@ -31,7 +31,7 @@
       <ul class="navbar__list">
         <li><a href="{% url 'posts:home' %}">MOCO</a></li>
         <li><a href="{% url 'posts:home' %}">모각코</a></li>
-        <li>플레이스</li>
+        <li><a href="{% url 'place:home' %}">플레이스</a></li>
         <li><a href="">공지사항</a></li>
       </ul>
       <ul class="navbar__shortcut">
